--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -26,7 +26,8 @@
                   {{ review.created_on }}
                 </span>
               </p>
-              {{ review.rating | linebreaks }}
+              <p>{{ review.rating }} <span>Stars</span></p>
+             
               {{ review.body | linebreaks }} {% if user.is_authenticated and user.username == review.name %} <a href="{% url 'edit_review' review.id %}" aria-label="Go to the Edit Comments Page">Edit <i class="fa-solid fa-comment-pen"></i>
               </a>
               <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#delete-review">
