--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
   <div class="card my-4">
     <h5 class="card-header">About Us</h5>
     <div class="card-body">
-      <p class="card-text"> Embarr Equestrian: "Horses are not just a business for us, they are our passion"</p>
+      <p class="card-text"><h5><center><i class="fas fa-horse-head"></i> Embarr Equestrian</center></h5><br> "Horses are not just a business for us, they are our passion"</p>
       <p>Now established as one of the most successful Livery and Equine Coaching centres in the country, Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland. <br>
         <br>Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "imagination." <br> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.
       </p>
