--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
-<!-- UPDATE COMMENT SECTION -->
+<!-- User Update/  Edit Review -->
 <div class="container shadow-lg p-3 mb-5 bg-body rounded">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
