added image to sidebar

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,3 +42,6 @@
         <a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a>
       </li> {% endif %} </ul>
   </nav> {% endif %} {%endblock%}
+
+  <!--import JS script for Image gallery-->
+  <script src="assets/main.js"></script>
