--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,12 +1,14 @@
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
   <div class="card my-4">
-    <h5 class="card-header">About Us</h5>
+    <h4 class="card-header">About Us</h4>
     <div class="card-body">
-      <p class="card-text"><h5><center><i class="fas fa-horse-head"></i> Embarr Equestrian</center></h5><br> "Horses are not just a business for us, they are our passion"</p>
+      <p class="card-text"><h5><i class="fas fa-horse-head"></i> Embarr Equestrian</h5><br> "Horses are not just a business for us, they are our passion"</p>
       <p>Now established as one of the most successful Livery and Equine Coaching centres in the country, Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland. <br>
-        <br>Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "imagination." <br> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.
+        <br>Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "Imagination." <br> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.
       </p>
+      
+      <p><img src="https://res.cloudinary.com/chellej80/image/upload/v1659010290/Embarr_1_zqplyd.jpg" alt="Horse Head in Field" style="width: 100%"></p>
       <p>
         <a href="https://chellej80.github.io/Embarr-Equestrian/" target="_blank" class="btn btn-primary">Know more!</a>
       </p>
