--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,6 +65,78 @@ header {
     
     }
 
+/*style the slideshow gallery for the three sub pages 
+Code Ref: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self*/
+* {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+body {
+    font-family: Verdana, sans-serif;
+    margin: 0;
+}
+.mySlides {
+    display: none;
+}
+img {
+    vertical-align: middle;
+}
+
+/* Create and style the Slideshow container */
+.slideshow-container {
+    max-width: 100%;
+    position: relative;
+    margin: 15px;
+    margin-bottom: 0px;
+    height: auto;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+/* style the Next & previous buttons that appear on the manual gallery slideshow*/
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    -webkit-transition: 0.6s ease;
+    -o-transition: 0.6s ease;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.356);;
+}
+
+/* style the gallery slideshow Number text (1/2 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 10px 15px;
+    position: absolute;
+    top: 0;
+    font-weight: 500;
+    background-color: rgba(0, 0, 0, 0.356);
+}
 
 /* Media Queries */
 
