updated sidebar formatting

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,11 +5,13 @@
     <div class="card-body">
       <p class="card-text"><h5><i class="fas fa-horse-head"></i> Embarr Equestrian</h5></p>
       <p> "Horses are not just a business for us, they are our passion"</p> 
-      <p>Now established as one of the most successful Livery and Equine Coaching centres in the country, Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland.Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "Imagination." <br> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.
+      <p>Now established as one of the most successful Livery and Equine Coaching centres in the country, Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland.
+      <p>Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "Imagination."</p> 
+      <p> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.</p>
       <a href="https://en.wikipedia.org/wiki/Enbarr" target="_blank">Read More</a>
       </p>
       <p>
-      <img src="https://res.cloudinary.com/chellej80/image/upload/v1659010290/Embarr_1_zqplyd.jpg" alt="Horse Head in Field" style="width: 100%"></p>
+      <img src="https://res.cloudinary.com/chellej80/image/upload/v1659010290/Embarr_1_zqplyd.jpg" alt="Horse in Field" style="width: 100%"></p>
     </div>
   </div>
 </div>
