updated read more link in sidebar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,8 +7,8 @@
       <p> "Horses are not just a business for us, they are our passion"</p> 
       <p>Now established as one of the most successful Livery and Equine Coaching centres in the country, Embarr Equestrian in Co. Meath, Ireland is set on 120 acres of rolling parkland.
       <p>Owned by the Jordan family, the name is inspired by the mythical horse named "Embarr" a Gaelic word that means "Imagination."</p> 
-      <p> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.</p>
-      <a href="https://en.wikipedia.org/wiki/Enbarr" target="_blank">Read More</a>
+      <p> In mythology, this is the name of the heroine Niamh's magical horse that could cross the sea and land without touching the water or the ground.
+      <a href="https://en.wikipedia.org/wiki/Enbarr" target="_blank">Read More</a></p>
       </p>
       <p>
       <img src="https://res.cloudinary.com/chellej80/image/upload/v1659010290/Embarr_1_zqplyd.jpg" alt="Horse in Field" style="width: 100%"></p>
