updated feature section of readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
           </div> {% endfor %} </div>
       </div>
     </div> {% block content %}
-    <!-- Content Goes here --> {% endblock content %}
+    {% endblock content %}
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
       <p class="m-0 text-center text-grey">Follow us: 
