--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,11 @@
 {% extends "base.html" %} {% block content %} <header class="masthead">
-    <div class="overlay"></div>
     <div class="container h-100">
       <div class="row">
-        <div class="col-md-8 col-md-16 mx-auto">
-          <div class="site-heading">
-            <h3 class="site-heading my-8 mt-3 text-grey align-items-center"> Welcome to Embarr Equestrian Services | Please leave a Review</h3>
+        <div class="col-md-6 col-md-6 mx-auto">
+          <h4 class="site-heading my-3 mt-4 text-grey"> Welcome to Embarr Equestrian Services | Please Review</h4>
             <hr>
-            <div class="container h-100">
-              <div class="row align-items-center">
-                <form action="{% url 'search' %}" method="POST" class="d-flex mx-auto col-md-8"> {% csrf_token %} <input class="form-control me-2" type="search" name="searched" placeholder="Search for a Service e.g Livery" aria-label="Search">
+              <div class="row">
+                <form action="{% url 'search' %}" method="POST" class="d-flex mx-auto col-md-6"> {% csrf_token %} <input class="form-control me-2" type="search" name="searched" placeholder="Search for a Service e.g Livery" aria-label="Search">
                   <button class="btn btn-primary" type="submit">
                     <i class="fas fa-search"></i>
                   </button>
@@ -16,9 +13,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
+        </div>    
   </header>
   <div class="container">
     <div class="row">
