--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,125 +1,101 @@
-
 body {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
-    background-color:#fff;
-    }
-
-.masthead {
-        overflow: hidden;
-        position: relative;
-        display: inline-block;
-        height: 30vh;
-        width: 100%;
-        background:#698bb0;
-    }
-
-.row {
-        margin-top: 15px;
-        margin-bottom: 15px;
-
-    }
-
-header {
-        background: #fff;
-    } 
-
-.head_text {
-    color: white;
-    }
-
-.site-heading {
-
-    text-align: center;
-}
-
-.card {
-    box-shadow: 0 16px 48px #E3E7EB;
-    }
-
-
-.card-title {
-    font-size: 1.5em;
-    }
-    
-    
-.image-container {
+    background-color: #fff;
+  }
+  
+  .masthead {
+    overflow: hidden;
     position: relative;
-}
-
-.top-left {
+    display: inline-block;
+    height: 30vh;
+    width: 100%;
+    background: #698bb0;
+  }
+  
+  .row {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  
+  header {
+    background: #fff;
+  }
+  
+  .head_text {
+    color: white;
+  }
+  
+  .site-heading {
+    text-align: center;
+  }
+  
+  .card {
+    box-shadow: 0 16px 48px #e3e7eb;
+  }
+  
+  .card-title {
+    font-size: 1.5em;
+  }
+  
+  .image-container {
+    position: relative;
+  }
+  
+  .top-left {
     position: absolute;
     top: 10px;
     left: 16px;
   }
-
-.bottom-left {
+  
+  .bottom-left {
     position: absolute;
     bottom: 10px;
     left: 16px;
   }
-
-            
-.shadow {
+  
+  .shadow {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-    }
-
-.btn-danger {
+  }
+  
+  .btn-danger {
     color: #fff;
     background-color: blue;
-    
+  }
+  
+  /* Media Queries */
+  
+  @media only screen and (min-width: 425px) and (max-width: 768px) {
+    .card-title {
+      font-size: 1em;
     }
-
-
-/* Media Queries */
-
-    @media only screen and (min-width: 425px) and (max-width: 768px) {
-
-        .card-title {
-            font-size: 1.0em;
-            }
-
-        .btn-primary {
-
-            font-size: 0.75rem;
-        }
-
-        
-    
+  
+    .btn-primary {
+      font-size: 0.75rem;
     }
-
-    @media only screen and (min-width: 280px) and (max-width: 425px) {
-
-        .card-title {
-            font-size: 0.75em;
-            }
-
-        .btn-primary {
-
-                font-size: 0.5rem;
-            }
-        
-    
+  }
+  
+  @media only screen and (min-width: 280px) and (max-width: 425px) {
+    .card-title {
+      font-size: 0.75em;
     }
-
-    @media only screen and (min-width: 525px) and (max-width: 768px) {
-    
-        .site-heading {
-
-            text-align: center;
-            font-size: 2.75vh;
-        
-        }
-
+  
+    .btn-primary {
+      font-size: 0.5rem;
     }
-
-    @media only screen and (min-width: 280px) and (max-width: 525px) {
-    
-        .site-heading {
-
-            text-align: center;
-            font-size: 2.0vh;
-        
-        }
-
+  }
+  
+  @media only screen and (min-width: 525px) and (max-width: 768px) {
+    .site-heading {
+      text-align: center;
+      font-size: 2.75vh;
     }
+  }
+  
+  @media only screen and (min-width: 280px) and (max-width: 525px) {
+    .site-heading {
+      text-align: center;
+      font-size: 2vh;
+    }
+  }
+  
